--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "lotide",
+  "name": "@harinderlabana/lotide",
   "version": "1.0.0",
-  "description": "",
-  "main": "assertArraysEqual.js",
+  "description": "A mini clone of the [Lodash](https://lodash.com) library.",
+  "main": "index.js",
   "directories": {
     "test": "test"
   },
